@@ -3,9 +3,9 @@ package com.hcc.tfm_hcc.facade.impl;
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.core.io.Resource;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Component;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -14,6 +14,9 @@ import com.hcc.tfm_hcc.dto.HistorialClinicoDTO;
 import com.hcc.tfm_hcc.facade.HistorialClinicoFacade;
 import com.hcc.tfm_hcc.mapper.ArchivoClinicoMapper;
 import com.hcc.tfm_hcc.model.ArchivoClinico;
+import com.hcc.tfm_hcc.exception.ArchivoClinicoException;
+import com.hcc.tfm_hcc.exception.DatosClinicosValidationException;
+import com.hcc.tfm_hcc.exception.HistorialClinicoException;
 import com.hcc.tfm_hcc.service.ArchivoClinicoService;
 import com.hcc.tfm_hcc.service.HistorialClinicoService;
 
@@ -78,7 +81,8 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * @throws RuntimeException Si ocurre un error durante la consulta
      */
     @Override
-    public List<ArchivoClinicoDTO> listMine() {
+    @PreAuthorize("isAuthenticated()")
+    public List<ArchivoClinicoDTO> listarArchivos() {
         log.debug("Obteniendo lista de archivos clínicos del usuario autenticado");
         
         try {
@@ -86,13 +90,13 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             
             List<ArchivoClinicoDTO> resultado = archivos.stream()
                     .map(archivoClinicoMapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
             
             log.info("Archivos clínicos obtenidos: {} registros", resultado.size());
             return resultado;
         } catch (Exception e) {
             log.error("Error inesperado al obtener archivos clínicos del usuario: {}", e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la consulta de archivos clínicos", e);
+            throw new ArchivoClinicoException("Error interno durante la consulta de archivos clínicos", e);
         }
     }
 
@@ -101,11 +105,12 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * 
      * @param file El archivo a subir
      * @return ArchivoClinicoDTO El archivo clínico subido con su información
-     * @throws IllegalArgumentException Si el archivo es inválido
+     * @throws DatosClinicosValidationException Si el archivo es inválido
      * @throws IOException Si ocurre un error durante la subida del archivo
-     * @throws RuntimeException Si ocurre un error inesperado
+     * @throws ArchivoClinicoException Si ocurre un error inesperado
      */
     @Override
+    @PreAuthorize("isAuthenticated()")
     public ArchivoClinicoDTO upload(MultipartFile file) throws IOException {
         log.debug("Iniciando subida de archivo clínico: {}", 
                 file != null ? file.getOriginalFilename() : "null");
@@ -120,7 +125,7 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
                     file != null ? file.getOriginalFilename() : "unknown", 
                     resultado != null ? resultado.getId() : "unknown");
             return resultado;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al subir archivo: {} - Error: {}", 
                     file != null ? file.getOriginalFilename() : "null", e.getMessage());
             throw e;
@@ -131,7 +136,7 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
         } catch (Exception e) {
             log.error("Error inesperado al subir archivo: {} - Error: {}", 
                      file != null ? file.getOriginalFilename() : "null", e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la subida del archivo", e);
+            throw new ArchivoClinicoException("Error interno durante la subida del archivo", e);
         }
     }
 
@@ -140,31 +145,32 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * 
      * @param id ID del archivo clínico
      * @return ArchivoClinicoDTO Los datos del archivo clínico
-     * @throws IllegalArgumentException Si el ID es inválido o el archivo no existe
-     * @throws RuntimeException Si ocurre un error durante la consulta
+     * @throws DatosClinicosValidationException Si el ID es inválido
+     * @throws ArchivoClinicoException Si el archivo no existe o ocurre un error durante la consulta
      */
     @Override
-    public ArchivoClinicoDTO getMine(UUID id) {
+    @PreAuthorize("isAuthenticated()")
+    public ArchivoClinicoDTO getArchivoClinico(UUID id) {
         log.debug("Obteniendo archivo clínico: {}", id);
         
         try {
             validarId(id);
             
-            ArchivoClinico ac = archivoClinicoService.listMine().stream()
+            ArchivoClinico archivoClinico = archivoClinicoService.listMine().stream()
                     .filter(a -> a.getId().equals(id))
                     .findFirst()
-                    .orElseThrow(() -> new IllegalArgumentException("No existe el archivo especificado"));
+                    .orElseThrow(() -> new ArchivoClinicoException("No existe el archivo especificado"));
             
-            ArchivoClinicoDTO resultado = archivoClinicoMapper.toDto(ac);
+            ArchivoClinicoDTO resultado = archivoClinicoMapper.toDto(archivoClinico);
             
             log.info("Archivo clínico obtenido exitosamente: {}", id);
             return resultado;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al obtener archivo: {} - Error: {}", id, e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al obtener archivo: {} - Error: {}", id, e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la consulta del archivo", e);
+            throw new ArchivoClinicoException("Error interno durante la consulta del archivo", e);
         }
     }
 
@@ -173,10 +179,11 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * 
      * @param id ID del archivo clínico
      * @return Resource El recurso del archivo para descarga
-     * @throws IllegalArgumentException Si el ID es inválido
-     * @throws RuntimeException Si ocurre un error durante la consulta
+    * @throws DatosClinicosValidationException Si el ID es inválido
+    * @throws ArchivoClinicoException Si ocurre un error durante la consulta
      */
     @Override
+    @PreAuthorize("isAuthenticated()")
     public Resource getMineResource(UUID id) {
         log.debug("Obteniendo recurso de archivo clínico: {}", id);
         
@@ -187,12 +194,12 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             
             log.info("Recurso de archivo obtenido exitosamente: {}", id);
             return resource;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al obtener recurso de archivo: {} - Error: {}", id, e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al obtener recurso de archivo: {} - Error: {}", id, e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la consulta del recurso", e);
+            throw new ArchivoClinicoException("Error interno durante la consulta del recurso", e);
         }
     }
 
@@ -200,21 +207,22 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * Elimina un archivo clínico del usuario autenticado.
      * 
      * @param id ID del archivo clínico a eliminar
-     * @throws IllegalArgumentException Si el ID es inválido
+     * @throws DatosClinicosValidationException Si el ID es inválido
      * @throws IOException Si ocurre un error durante la eliminación del archivo
-     * @throws RuntimeException Si ocurre un error inesperado
+     * @throws ArchivoClinicoException Si ocurre un error inesperado
      */
     @Override
-    public void delete(UUID id) throws IOException {
+    @PreAuthorize("isAuthenticated()")
+    public void borrarArchivoClinico(UUID id) throws IOException {
         log.debug("Eliminando archivo clínico: {}", id);
         
         try {
             validarId(id);
             
-            archivoClinicoService.deleteMine(id);
+            archivoClinicoService.borrarArchivo(id);
             
             log.info("Archivo clínico eliminado exitosamente: {}", id);
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al eliminar archivo: {} - Error: {}", id, e.getMessage());
             throw e;
         } catch (IOException e) {
@@ -222,7 +230,7 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al eliminar archivo: {} - Error: {}", id, e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la eliminación del archivo", e);
+            throw new ArchivoClinicoException("Error interno durante la eliminación del archivo", e);
         }
     }
 
@@ -234,9 +242,10 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * Obtiene el historial clínico completo del usuario autenticado.
      * 
      * @return HistorialClinicoDTO Los datos del historial clínico del usuario
-     * @throws RuntimeException Si ocurre un error durante la consulta
+    * @throws HistorialClinicoException Si ocurre un error durante la consulta
      */
     @Override
+    @PreAuthorize("isAuthenticated()")
     public HistorialClinicoDTO obtenerMiHistoria() {
         log.debug("Obteniendo historial clínico del usuario autenticado");
         
@@ -247,35 +256,34 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             return historial;
         } catch (Exception e) {
             log.error("Error inesperado al obtener historial clínico: {}", e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la consulta del historial clínico", e);
+            throw new HistorialClinicoException("Error interno durante la consulta del historial clínico", e);
         }
     }
 
     /**
      * Actualiza la información de identificación en el historial clínico.
      * 
-     * @param identificacionJson JSON con los datos de identificación
+     * @param historialClinicoDTO Datos de identificación
      * @return HistorialClinicoDTO El historial clínico actualizado
-     * @throws IllegalArgumentException Si el JSON de identificación es inválido
-     * @throws RuntimeException Si ocurre un error durante la actualización
+    * @throws DatosClinicosValidationException Si el JSON de identificación es inválido
+    * @throws HistorialClinicoException Si ocurre un error durante la actualización
      */
     @Override
-    public HistorialClinicoDTO actualizarIdentificacion(String identificacionJson) {
+    @PreAuthorize("isAuthenticated()")
+    public HistorialClinicoDTO actualizarIdentificacion(HistorialClinicoDTO historialClinicoDTO) {
         log.debug("Actualizando identificación en historial clínico");
         
-        try {
-            validarJson(identificacionJson, "identificación");
-            
-            HistorialClinicoDTO resultado = historiaClinicaService.actualizarIdentificacion(identificacionJson);
+        try {            
+            HistorialClinicoDTO resultado = historiaClinicaService.actualizarIdentificacion(historialClinicoDTO);
             
             log.info("Identificación actualizada exitosamente en historial clínico");
             return resultado;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al actualizar identificación: {}", e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al actualizar identificación: {}", e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la actualización de identificación", e);
+            throw new HistorialClinicoException("Error interno durante la actualización de identificación", e);
         }
     }
 
@@ -284,10 +292,11 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * 
      * @param antecedentesFamiliares Datos de antecedentes familiares
      * @return HistorialClinicoDTO El historial clínico actualizado
-     * @throws IllegalArgumentException Si los datos son inválidos
-     * @throws RuntimeException Si ocurre un error durante la actualización
+    * @throws DatosClinicosValidationException Si los datos son inválidos
+    * @throws HistorialClinicoException Si ocurre un error durante la actualización
      */
     @Override
+    @PreAuthorize("isAuthenticated()")
     public HistorialClinicoDTO actualizarAntecedentes(String antecedentesFamiliares) {
         log.debug("Actualizando antecedentes familiares en historial clínico");
         
@@ -298,12 +307,12 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             
             log.info("Antecedentes familiares actualizados exitosamente en historial clínico");
             return resultado;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al actualizar antecedentes: {}", e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al actualizar antecedentes: {}", e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la actualización de antecedentes", e);
+            throw new HistorialClinicoException("Error interno durante la actualización de antecedentes", e);
         }
     }
 
@@ -312,10 +321,11 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * 
      * @param alergiasJson JSON con los datos de alergias
      * @return HistorialClinicoDTO El historial clínico actualizado
-     * @throws IllegalArgumentException Si el JSON de alergias es inválido
-     * @throws RuntimeException Si ocurre un error durante la actualización
+    * @throws DatosClinicosValidationException Si el JSON de alergias es inválido
+    * @throws HistorialClinicoException Si ocurre un error durante la actualización
      */
     @Override
+    @PreAuthorize("isAuthenticated()")
     public HistorialClinicoDTO actualizarAlergias(String alergiasJson) {
         log.debug("Actualizando alergias en historial clínico");
         
@@ -326,12 +336,12 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             
             log.info("Alergias actualizadas exitosamente en historial clínico");
             return resultado;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al actualizar alergias: {}", e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al actualizar alergias: {}", e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la actualización de alergias", e);
+            throw new HistorialClinicoException("Error interno durante la actualización de alergias", e);
         }
     }
 
@@ -340,11 +350,12 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * 
      * @param alergiasJson Texto con las nuevas alergias (una por línea)
      * @return HistorialClinicoDTO El historial clínico actualizado
-     * @throws IllegalArgumentException Si los datos de alergias son inválidos
-     * @throws RuntimeException Si ocurre un error durante la operación
+    * @throws DatosClinicosValidationException Si los datos de alergias son inválidos
+    * @throws HistorialClinicoException Si ocurre un error durante la operación
      */
     @Override
-    public HistorialClinicoDTO añadirAlergias(String alergiasJson) {
+    @PreAuthorize("isAuthenticated()")
+    public HistorialClinicoDTO anadirAlergias(String alergiasJson) {
         log.debug("Añadiendo nuevas alergias en historial clínico");
         
         try {
@@ -354,12 +365,12 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             
             log.info("Alergias añadidas exitosamente en historial clínico");
             return resultado;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al añadir alergias: {}", e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al añadir alergias: {}", e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la adición de alergias", e);
+            throw new HistorialClinicoException("Error interno durante la adición de alergias", e);
         }
     }
 
@@ -368,10 +379,11 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * 
      * @param analisisJson JSON con los datos de análisis de sangre
      * @return HistorialClinicoDTO El historial clínico actualizado
-     * @throws IllegalArgumentException Si el JSON de análisis es inválido
-     * @throws RuntimeException Si ocurre un error durante la actualización
+     * @throws DatosClinicosValidationException Si el JSON de análisis es inválido
+     * @throws HistorialClinicoException Si ocurre un error durante la actualización
      */
     @Override
+    @PreAuthorize("isAuthenticated()")
     public HistorialClinicoDTO actualizarAnalisisSangre(String analisisJson) {
         log.debug("Actualizando análisis de sangre en historial clínico");
         
@@ -382,17 +394,18 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             
             log.info("Análisis de sangre actualizados exitosamente en historial clínico");
             return resultado;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al actualizar análisis de sangre: {}", e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al actualizar análisis de sangre: {}", e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la actualización de análisis", e);
+            throw new HistorialClinicoException("Error interno durante la actualización de análisis", e);
         }
     }
     
     @Override
-    public HistorialClinicoDTO añadirAnalisisSangre(String analisisJson) {
+    @PreAuthorize("isAuthenticated()")
+    public HistorialClinicoDTO anadirAnalisisSangre(String analisisJson) {
         log.debug("Añadiendo nuevos análisis de sangre al historial clínico");
         
         try {
@@ -402,12 +415,12 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             
             log.info("Análisis de sangre añadidos exitosamente al historial clínico");
             return resultado;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al añadir análisis de sangre: {}", e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al añadir análisis de sangre: {}", e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la adición de análisis", e);
+            throw new HistorialClinicoException("Error interno durante la adición de análisis", e);
         }
     }
 
@@ -419,10 +432,11 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * Borra un dato clínico específico del historial.
      * 
      * @param id ID del dato clínico a borrar
-     * @throws IllegalArgumentException Si el ID es inválido
-     * @throws RuntimeException Si ocurre un error durante la eliminación
+     * @throws DatosClinicosValidationException Si el ID es inválido
+     * @throws HistorialClinicoException Si ocurre un error durante la eliminación
      */
     @Override
+    @PreAuthorize("isAuthenticated()")
     public void borrarDatoClinico(UUID id) {
         log.debug("Borrando dato clínico: {}", id);
         
@@ -432,12 +446,12 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             historiaClinicaService.borrarDatoClinico(id);
             
             log.info("Dato clínico borrado exitosamente: {}", id);
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al borrar dato clínico: {} - Error: {}", id, e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al borrar dato clínico: {} - Error: {}", id, e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la eliminación del dato clínico", e);
+            throw new HistorialClinicoException("Error interno durante la eliminación del dato clínico", e);
         }
     }
 
@@ -446,10 +460,11 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * 
      * @param index Índice del antecedente a borrar
      * @return HistorialClinicoDTO El historial clínico actualizado
-     * @throws IllegalArgumentException Si el índice es inválido
-     * @throws RuntimeException Si ocurre un error durante la eliminación
+     * @throws DatosClinicosValidationException Si el índice es inválido
+     * @throws HistorialClinicoException Si ocurre un error durante la eliminación
      */
     @Override
+    @PreAuthorize("isAuthenticated()")
     public HistorialClinicoDTO borrarAntecedente(int index) {
         log.debug("Borrando antecedente en índice: {}", index);
         
@@ -460,12 +475,12 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             
             log.info("Antecedente borrado exitosamente en índice: {}", index);
             return resultado;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al borrar antecedente: índice {} - Error: {}", index, e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al borrar antecedente: índice {} - Error: {}", index, e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la eliminación del antecedente", e);
+            throw new HistorialClinicoException("Error interno durante la eliminación del antecedente", e);
         }
     }
 
@@ -475,10 +490,11 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * @param index Índice del antecedente a editar
      * @param texto Nuevo texto para el antecedente
      * @return HistorialClinicoDTO El historial clínico actualizado
-     * @throws IllegalArgumentException Si el índice o texto son inválidos
-     * @throws RuntimeException Si ocurre un error durante la edición
+     * @throws DatosClinicosValidationException Si el índice o texto son inválidos
+     * @throws HistorialClinicoException Si ocurre un error durante la edición
      */
     @Override
+    @PreAuthorize("isAuthenticated()")
     public HistorialClinicoDTO editarAntecedente(int index, String texto) {
         log.debug("Editando antecedente en índice: {} con texto: {}", index, 
                 texto != null && texto.length() > 50 ? texto.substring(0, 50) + "..." : texto);
@@ -491,12 +507,12 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
             
             log.info("Antecedente editado exitosamente en índice: {}", index);
             return resultado;
-        } catch (IllegalArgumentException e) {
+        } catch (DatosClinicosValidationException e) {
             log.warn("Error de validación al editar antecedente: índice {} - Error: {}", index, e.getMessage());
             throw e;
         } catch (Exception e) {
             log.error("Error inesperado al editar antecedente: índice {} - Error: {}", index, e.getMessage(), e);
-            throw new RuntimeException("Error interno durante la edición del antecedente", e);
+            throw new HistorialClinicoException("Error interno durante la edición del antecedente", e);
         }
     }
 
@@ -508,25 +524,25 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * Valida un archivo para subida.
      * 
      * @param file Archivo a validar
-     * @throws IllegalArgumentException Si el archivo es inválido
+     * @throws DatosClinicosValidationException Si el archivo es inválido
      */
     private void validarArchivo(MultipartFile file) {
         if (file == null) {
-            throw new IllegalArgumentException("El archivo no puede ser nulo");
+            throw new DatosClinicosValidationException("El archivo no puede ser nulo");
         }
         
         if (file.isEmpty()) {
-            throw new IllegalArgumentException("El archivo no puede estar vacío");
+            throw new DatosClinicosValidationException("El archivo no puede estar vacío");
         }
         
         String filename = file.getOriginalFilename();
         if (filename == null || filename.trim().isEmpty()) {
-            throw new IllegalArgumentException("El archivo debe tener un nombre válido");
+            throw new DatosClinicosValidationException("El archivo debe tener un nombre válido");
         }
         
         // Validar tamaño máximo (por ejemplo, 10MB)
         if (file.getSize() > 10 * 1024 * 1024) {
-            throw new IllegalArgumentException("El archivo no puede superar los 10MB");
+            throw new DatosClinicosValidationException("El archivo no puede superar los 10MB");
         }
     }
 
@@ -534,11 +550,11 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * Valida un ID UUID.
      * 
      * @param id ID a validar
-     * @throws IllegalArgumentException Si el ID es inválido
+     * @throws DatosClinicosValidationException Si el ID es inválido
      */
     private void validarId(UUID id) {
         if (id == null) {
-            throw new IllegalArgumentException("El ID no puede ser nulo");
+            throw new DatosClinicosValidationException("El ID no puede ser nulo");
         }
     }
 
@@ -547,17 +563,17 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * 
      * @param json JSON a validar
      * @param tipo Tipo de datos que representa el JSON
-     * @throws IllegalArgumentException Si el JSON es inválido
+     * @throws DatosClinicosValidationException Si el JSON es inválido
      */
     private void validarJson(String json, String tipo) {
         if (json == null || json.trim().isEmpty()) {
-            throw new IllegalArgumentException("Los datos de " + tipo + " no pueden ser nulos o vacíos");
+            throw new DatosClinicosValidationException("Los datos de " + tipo + " no pueden ser nulos o vacíos");
         }
         
         // Validación básica de formato JSON
         String trimmed = json.trim();
         if (!trimmed.startsWith("{") && !trimmed.startsWith("[")) {
-            throw new IllegalArgumentException("Los datos de " + tipo + " deben tener formato JSON válido");
+            throw new DatosClinicosValidationException("Los datos de " + tipo + " deben tener formato JSON válido");
         }
     }
 
@@ -566,15 +582,15 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * 
      * @param texto Texto a validar
      * @param tipo Tipo de datos que representa el texto
-     * @throws IllegalArgumentException Si el texto es inválido
+     * @throws DatosClinicosValidationException Si el texto es inválido
      */
     private void validarTexto(String texto, String tipo) {
         if (texto == null || texto.trim().isEmpty()) {
-            throw new IllegalArgumentException("El " + tipo + " no puede ser nulo o vacío");
+            throw new DatosClinicosValidationException("El " + tipo + " no puede ser nulo o vacío");
         }
         
         if (texto.length() > 5000) {
-            throw new IllegalArgumentException("El " + tipo + " no puede superar los 5000 caracteres");
+            throw new DatosClinicosValidationException("El " + tipo + " no puede superar los 5000 caracteres");
         }
     }
 
@@ -582,11 +598,11 @@ public class HistorialClinicoFacadeImpl implements HistorialClinicoFacade {
      * Valida un índice para operaciones de array.
      * 
      * @param index Índice a validar
-     * @throws IllegalArgumentException Si el índice es inválido
+     * @throws DatosClinicosValidationException Si el índice es inválido
      */
     private void validarIndice(int index) {
         if (index < 0) {
-            throw new IllegalArgumentException("El índice no puede ser negativo");
+            throw new DatosClinicosValidationException("El índice no puede ser negativo");
         }
     }
 }
