@@ -2,11 +2,13 @@ package com.hcc.tfm_hcc.service.impl;
 
 import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
+import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -17,9 +19,9 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.hcc.tfm_hcc.constants.ErrorMessages;
-import com.hcc.tfm_hcc.dto.DatoClinicoDTO;
 import com.hcc.tfm_hcc.dto.HistorialClinicoDTO;
-import com.hcc.tfm_hcc.dto.RangoDTO;
+import com.hcc.tfm_hcc.dto.UsuarioDTO;
+import com.hcc.tfm_hcc.converter.HistorialClinicoConverter;
 import com.hcc.tfm_hcc.facade.UsuarioFacade;
 import com.hcc.tfm_hcc.model.AuditoriaCambio;
 import com.hcc.tfm_hcc.model.DatoClinico;
@@ -35,11 +37,17 @@ import com.hcc.tfm_hcc.service.HistorialClinicoService;
 @Service
 public class HistorialClinicoServiceImpl implements HistorialClinicoService {
 
+    private static final String CREATED_AT = "createdAt";
+    private static final String ALERGIA_INTOLERANCIA = "ALERGIA_INTOLERANCIA";
+    private static final String DATO_CLINICO = "dato_clinico";
+    private static final String HISTORIAL_CLINICO = "historial_clinico";
+    private static final String ANTECEDENTES_FAMILIARES = "ANTECEDENTES_FAMILIARES";
     private static final String TIPO_ALERGIA_INTOLERANCIA = "ALERGIA/INTOLERANCIA";
     private static final String UNIDAD_TEXTO = "text";
     private static final String TIPO_ANALISIS_DEFAULT = "ANALISIS";
     private static final String SEPARADOR_ANTECEDENTES = "\n\n";
     private static final DateTimeFormatter TIMESTAMP_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
+    private static final String ZONE_ID_EUROPA_MADRID = "Europe/Madrid";
 
     private final HistorialClinicoRepository historiaRepo;
     private final UsuarioFacade usuarioFacade;
@@ -47,6 +55,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
     private final DatoClinicoRepository datoClinicoRepository;
     private final RangoRepository rangoRepository;
     private final AuditoriaCambioService auditoriaCambioService;
+    private final HistorialClinicoConverter historialClinicoConverter;
     private final ObjectMapper objectMapper;
 
     public HistorialClinicoServiceImpl(
@@ -55,13 +64,15 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             UsuarioRepository usuarioRepository,
             DatoClinicoRepository datoClinicoRepository,
             RangoRepository rangoRepository,
-            AuditoriaCambioService auditoriaCambioService) {
+            AuditoriaCambioService auditoriaCambioService,
+            HistorialClinicoConverter historialClinicoConverter) {
         this.historiaRepo = historiaRepo;
         this.usuarioFacade = usuarioFacade;
         this.usuarioRepository = usuarioRepository;
         this.datoClinicoRepository = datoClinicoRepository;
         this.rangoRepository = rangoRepository;
         this.auditoriaCambioService = auditoriaCambioService;
+        this.historialClinicoConverter = historialClinicoConverter;
         this.objectMapper = new ObjectMapper();
     }
 
@@ -69,12 +80,12 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
      * Obtiene el usuario actual autenticado y verificado
      */
     private Usuario obtenerUsuarioAutenticado() {
-        var dto = usuarioFacade.getUsuarioActual();
-        if (dto == null) {
+        UsuarioDTO usuarioAutenticadoDTO = usuarioFacade.getUsuarioActual();
+        if (usuarioAutenticadoDTO == null) {
             throw new IllegalStateException(ErrorMessages.ERROR_USUARIO_NO_AUTENTICADO);
         }
         
-        String usuarioIdTexto = dto.getId();
+        String usuarioIdTexto = usuarioAutenticadoDTO.getId();
         if (usuarioIdTexto == null || usuarioIdTexto.isBlank()) {
             throw new IllegalStateException(ErrorMessages.ERROR_USUARIO_NO_AUTENTICADO);
         }
@@ -90,137 +101,52 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
     private HistorialClinico ensureForUsuario(Usuario usuario) {
         return historiaRepo.findByUsuario(usuario).orElseGet(() -> {
             HistorialClinico historial = new HistorialClinico();
-            historial.setFechaCreacion(LocalDateTime.now());
+            historial.setFechaCreacion(LocalDateTime.now(ZoneId.of(ZONE_ID_EUROPA_MADRID)));
             historial.setUsuario(usuario);
             return historiaRepo.save(historial);
         });
     }
 
-    /**
-     * Convierte una entidad HistorialClinico a DTO
-     */
-    private HistorialClinicoDTO toDto(HistorialClinico historial) {
-        HistorialClinicoDTO dto = new HistorialClinicoDTO();
-        dto.setAntecedentesFamiliares(historial.getAntecedentesFamiliares());
-        
-        var datosClinicos = datoClinicoRepository.findByHistorialClinico(historial);
-        if (datosClinicos != null && !datosClinicos.isEmpty()) {
-            var alergias = new ArrayList<DatoClinicoDTO>();
-            var analisis = new ArrayList<DatoClinicoDTO>();
-            
-            for (var datoClinico : datosClinicos) {
-                DatoClinicoDTO datoDto = convertirDatoClinicoADto(datoClinico);
-                
-                if (TIPO_ALERGIA_INTOLERANCIA.equals(datoClinico.getTipo())) {
-                    alergias.add(datoDto);
-                } else {
-                    analisis.add(datoDto);
-                }
-            }
-            
-            dto.setDatosClinicos(alergias);
-            dto.setAnalisisSangre(analisis);
-        }
-        
-        return dto;
-    }
-
-    /**
-     * Convierte una entidad DatoClinico a DTO
-     */
-    private DatoClinicoDTO convertirDatoClinicoADto(DatoClinico datoClinico) {
-        DatoClinicoDTO dto = new DatoClinicoDTO();
-        dto.setId(datoClinico.getId() != null ? datoClinico.getId().toString() : null);
-        dto.setTipo(datoClinico.getTipo());
-        dto.setValor(String.valueOf(datoClinico.getValor()));
-        dto.setUnidad(datoClinico.getUnidad());
-        dto.setObservacion(datoClinico.getObservacion());
-        dto.setCreatedAt(datoClinico.getFechaCreacion() != null ? 
-            datoClinico.getFechaCreacion().toString() : null);
-        
-        // Convertir el rango asociado si existe
-        if (datoClinico.getRango() != null) {
-            dto.setRango(convertirRangoADto(datoClinico.getRango()));
-        }
-        
-        return dto;
-    }
-    
-    /**
-     * Convierte una entidad Rango a DTO
-     */
-    private RangoDTO convertirRangoADto(com.hcc.tfm_hcc.model.Rango rango) {
-        RangoDTO dto = new RangoDTO();
-        dto.setId(rango.getId() != null ? rango.getId().toString() : null);
-        dto.setNombre(rango.getNombre());
-        dto.setValorSuperior(rango.getValorSuperior());
-        dto.setValorInferior(rango.getValorInferior());
-        
-        // Extraer valores numéricos para el frontend
-        dto.setValorSuperiorNumerico(extraerValorNumerico(rango.getValorSuperior()));
-        dto.setValorInferiorNumerico(extraerValorNumerico(rango.getValorInferior()));
-        
-        return dto;
-    }
-    
-    /**
-     * Extrae el valor numérico de una cadena que puede contener unidades.
-     * Ejemplo: "140 mg/dL" -> 140.0, "12.5" -> 12.5
-     */
-    private Double extraerValorNumerico(String valor) {
-        if (valor == null || valor.trim().isEmpty()) {
-            return null;
-        }
-        
-        try {
-            // Buscar el primer número en la cadena
-            String numeroStr = valor.trim().replaceAll("[^0-9.,]", "").replace(",", ".");
-            if (!numeroStr.isEmpty()) {
-                return Double.parseDouble(numeroStr);
-            }
-        } catch (NumberFormatException e) {
-            // Si no se puede parsear, devolver null
-        }
-        
-        return null;
-    }
-
     @Override
     @Transactional(readOnly = true)
     public HistorialClinicoDTO obtenerHistoriaUsuarioActual() {
-        var dto = usuarioFacade.getUsuarioActual();
-        if (dto == null) {
+        UsuarioDTO usuarioActualDTO = usuarioFacade.getUsuarioActual();
+        if (usuarioActualDTO == null) {
             return null;
         }
         
-        String usuarioIdTexto = dto.getId();
+        String usuarioIdTexto = usuarioActualDTO.getId();
         if (usuarioIdTexto == null || usuarioIdTexto.isBlank()) {
             return null;
         }
 
         UUID usuarioId = Objects.requireNonNull(UUID.fromString(usuarioIdTexto));
-        var usuario = usuarioRepository.findById(usuarioId);
+        Optional<Usuario> usuario = usuarioRepository.findById(usuarioId);
         if (usuario.isEmpty()) {
             return null;
         }
         
         return historiaRepo.findByUsuario(usuario.get())
-                .map(this::toDto)
+            .map(historial -> historialClinicoConverter.toDto(
+                historial,
+                datoClinicoRepository.findByHistorialClinico(historial)))
                 .orElse(null);
     }
 
     @Override
     @Transactional
-    public HistorialClinicoDTO actualizarIdentificacion(String identificacionJson) {
+    public HistorialClinicoDTO actualizarIdentificacion(HistorialClinicoDTO historialClinicoDTO) {
         Usuario usuario = obtenerUsuarioAutenticado();
         HistorialClinico historial = ensureForUsuario(usuario);
         
         if(historial == null) {
             throw new IllegalStateException(ErrorMessages.ERROR_HISTORIAL_NO_EXISTE);
         }
-        // Identificación persistida en otra entidad; no modificar aquí por restricciones del modelo
-        historiaRepo.save(historial);
-        return toDto(historial);
+        HistorialClinico historialActualizado = historialClinicoConverter.toEntity(historialClinicoDTO);
+        if(historialActualizado != null) {
+            historiaRepo.save(historialActualizado);
+        }
+        return historialClinicoDTO;
     }
 
     @Override
@@ -242,8 +168,8 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             usuario.getId().toString(),
             usuario.getId().toString(),
             null,
-            "ANTECEDENTES_FAMILIARES",
-            "historial_clinico",
+            ANTECEDENTES_FAMILIARES,
+            HISTORIAL_CLINICO,
             historial.getId().toString(),
             valorAnterior,
             antecedentesFamiliares,
@@ -251,7 +177,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             "Actualización de antecedentes familiares"
         );
         
-        return toDto(historial);
+        return historialClinicoConverter.toDto(historial, datoClinicoRepository.findByHistorialClinico(historial));
     }
 
     /**
@@ -261,7 +187,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
         if (antecedentes == null || antecedentes.trim().isEmpty()) {
             historial.setAntecedentesFamiliares(null);
         } else {
-            historial.setAntecedentesFamiliares(antecedentes.trim());
+            historial.setAntecedentesFamiliares(antecedentes);
         }
     }
 
@@ -291,8 +217,8 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             usuario.getId().toString(),
             usuario.getId().toString(),
             null,
-            "ALERGIA_INTOLERANCIA",
-            "dato_clinico",
+            ALERGIA_INTOLERANCIA,
+            DATO_CLINICO,
             historial.getId().toString(),
             valorAnterior,
             alergiasJson,
@@ -300,7 +226,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             "Reemplazo completo de alergias e intolerancias"
         );
         
-        return toDto(historial);
+        return historialClinicoConverter.toDto(historial, datoClinicoRepository.findByHistorialClinico(historial));
     }
 
     @Override
@@ -316,13 +242,13 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
         String soloAlergias = alergiasJson;
         if (alergiasJson != null && alergiasJson.trim().startsWith("{")) {
             try {
-                com.fasterxml.jackson.databind.ObjectMapper mapper = new com.fasterxml.jackson.databind.ObjectMapper();
-                com.fasterxml.jackson.databind.JsonNode node = mapper.readTree(alergiasJson);
+                ObjectMapper mapper = new ObjectMapper();
+                JsonNode node = mapper.readTree(alergiasJson);
                 if (node.has("alergias")) {
                     soloAlergias = node.get("alergias").asText();
                 }
-            } catch (Exception e) {
-                // Si falla el parseo, usar el texto original
+            } catch (JsonProcessingException jsonError) {
+                throw new IllegalArgumentException(ErrorMessages.ERROR_JSON_INVALIDO, jsonError);
             }
         }
         procesarAlergias(soloAlergias, historial, false);
@@ -333,8 +259,8 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             usuario.getId().toString(),
             usuario.getId().toString(),
             null,
-            "ALERGIA_INTOLERANCIA",
-            "dato_clinico",
+            ALERGIA_INTOLERANCIA,
+            DATO_CLINICO,
             historial.getId().toString(),
             "",
             soloAlergias,
@@ -342,7 +268,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             "Adición de nuevas alergias e intolerancias"
         );
         
-        return toDto(historial);
+        return historialClinicoConverter.toDto(historial, datoClinicoRepository.findByHistorialClinico(historial));
     }
 
     /**
@@ -353,6 +279,8 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
      * @param eliminarExistentes Si true, elimina todas las alergias existentes antes de guardar las nuevas.
      *                           Si false, solo añade las nuevas alergias sin eliminar las existentes.
      */
+    // TODO Revisar esto, no tiene mucho sentido lo de eliminar todo para guardar una nueva
+    @SuppressWarnings("null")
     private void procesarAlergias(String alergiasJson, HistorialClinico historial, boolean eliminarExistentes) {
         if (eliminarExistentes) {
             // Eliminar todas las alergias existentes
@@ -370,13 +298,11 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             return;
         }
 
-        // Guardar todo el texto como una sola alergia
+        // Guardar el texto como una sola alergia
         String textoAlergia = alergiasJson.trim();
         if (!textoAlergia.isEmpty()) {
             DatoClinico nuevaAlergia = crearDatoClinicoAlergia(textoAlergia, historial);
-            if (nuevaAlergia != null) {
-                datoClinicoRepository.save(nuevaAlergia);
-            }
+            datoClinicoRepository.save(nuevaAlergia);
         }
     }
 
@@ -390,7 +316,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
         datoClinico.setUnidad(UNIDAD_TEXTO);
         datoClinico.setObservacion(textoAlergia);
         datoClinico.setHistorialClinico(historial);
-        datoClinico.setFechaCreacion(LocalDateTime.now());
+        datoClinico.setFechaCreacion(LocalDateTime.now(ZoneId.of(ZONE_ID_EUROPA_MADRID)));
         return datoClinico;
     }
 
@@ -413,7 +339,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             usuario.getId().toString(),
             null,
             "ANALISIS_SANGRE",
-            "dato_clinico",
+            DATO_CLINICO,
             historial.getId().toString(),
             "",
             analisisJson,
@@ -421,7 +347,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             "Reemplazo completo de análisis de sangre"
         );
         
-        return toDto(historial);
+        return historialClinicoConverter.toDto(historial);
     }
     
     @Override
@@ -443,7 +369,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             usuario.getId().toString(),
             null,
             "ANALISIS_SANGRE",
-            "dato_clinico",
+            DATO_CLINICO,
             historial.getId().toString(),
             "",
             analisisJson,
@@ -451,7 +377,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             "Adición de nuevos análisis de sangre"
         );
         
-        return toDto(historial);
+        return historialClinicoConverter.toDto(historial);
     }
 
     /**
@@ -462,6 +388,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
      * @param eliminarExistentes Si true, elimina todos los análisis existentes antes de guardar los nuevos (reemplazo completo).
      *                           Si false, solo añade los nuevos análisis sin eliminar los existentes.
      */
+    // TODO Revisar esto, no tiene mucho sentido lo de eliminar todo para guardar una nueva
     private void procesarAnalisisSangre(String analisisJson, HistorialClinico historial, boolean eliminarExistentes) {
         if (eliminarExistentes) {
             // Eliminar todos los análisis de sangre existentes
@@ -609,7 +536,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
         String valorTexto = item.get("value").asText();
         try {
             return Float.parseFloat(valorTexto.replace(',', '.'));
-        } catch (NumberFormatException ex) {
+        } catch (NumberFormatException _) {
             throw new IllegalArgumentException(ErrorMessages.ERROR_VALOR_NUMERICO_INVALIDO + ": " + valorTexto);
         }
     }
@@ -618,19 +545,19 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
      * Obtiene la fecha de creación del análisis, o la actual si no se proporciona
      */
     private LocalDateTime obtenerFechaCreacionAnalisis(JsonNode item) {
-        if (!item.has("createdAt") || item.get("createdAt").isNull()) {
-            return LocalDateTime.now();
+        if (!item.has(CREATED_AT) || item.get(CREATED_AT).isNull()) {
+            return LocalDateTime.now(ZoneId.of(ZONE_ID_EUROPA_MADRID));
         }
 
-        String fechaTexto = item.get("createdAt").asText();
+        String fechaTexto = item.get(CREATED_AT).asText();
         try {
             OffsetDateTime offsetDateTime = OffsetDateTime.parse(fechaTexto);
             return offsetDateTime.toLocalDateTime();
-        } catch (Exception ex) {
+        } catch (Exception _) {
             try {
                 return LocalDateTime.parse(fechaTexto);
-            } catch (Exception ex2) {
-                return LocalDateTime.now();
+            } catch (Exception _) {
+                return LocalDateTime.now(ZoneId.of(ZONE_ID_EUROPA_MADRID));
             }
         }
     }
@@ -656,7 +583,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             usuario.getId().toString(),
             null,
             datoClinico.getTipo(),
-            "dato_clinico",
+            DATO_CLINICO,
             id.toString(),
             valorAnterior,
             "",
@@ -718,8 +645,8 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             usuario.getId().toString(),
             usuario.getId().toString(),
             null,
-            "ANTECEDENTES_FAMILIARES",
-            "historial_clinico",
+            ANTECEDENTES_FAMILIARES,
+            HISTORIAL_CLINICO,
             historial.getId().toString(),
             antecedenteBorrado,
             "",
@@ -727,7 +654,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             "Eliminación de antecedente familiar"
         );
         
-        return toDto(historial);
+        return historialClinicoConverter.toDto(historial);
     }
 
     @Override
@@ -755,8 +682,8 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             usuario.getId().toString(),
             usuario.getId().toString(),
             null,
-            "ANTECEDENTES_FAMILIARES",
-            "historial_clinico",
+            ANTECEDENTES_FAMILIARES,
+            HISTORIAL_CLINICO,
             historial.getId().toString(),
             valorAnterior,
             entradaConTimestamp,
@@ -764,7 +691,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
             "Edición de antecedente familiar"
         );
         
-        return toDto(historial);
+        return historialClinicoConverter.toDto(historial);
     }
 
     /**
@@ -779,7 +706,7 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
         return Arrays.stream(antecedentesTexto.split("\r?\n\s*\r?\n"))
                 .filter(parte -> parte != null && !parte.trim().isEmpty())
                 .map(String::trim)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -795,10 +722,10 @@ public class HistorialClinicoServiceImpl implements HistorialClinicoService {
     }
 
     /**
-     * Crea una entrada de antecedente con timestamp
+     * Crea una entrada con timestamp
      */
     private String crearEntradaConTimestamp(String texto) {
-        String timestamp = LocalDateTime.now().format(TIMESTAMP_FORMATTER);
+        String timestamp = LocalDateTime.now(ZoneId.of(ZONE_ID_EUROPA_MADRID)).format(TIMESTAMP_FORMATTER);
         String textoLimpio = texto != null ? texto.trim() : "";
         return "[" + timestamp + "] " + textoLimpio;
     }
